globus-gass-copy (9.5-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Thu, 20 Feb 2014 14:34:47 -0500

globus-gass-copy (9.4-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Thu, 20 Feb 2014 14:17:53 -0500

globus-gass-copy (9.3-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Thu, 20 Feb 2014 11:09:09 -0500

globus-gass-copy (9.2-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Wed, 19 Feb 2014 14:52:36 -0500

globus-gass-copy (9.1-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 11:38:12 -0500

globus-gass-copy (9.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 11:27:51 -0500

globus-gass-copy (8.6-1) unstable; urgency=low

  * GT-241: wrong SIGINT handling in globus-url-copy

 -- Globus Toolkit <support@globus.org>  Tue, 17 Jul 2012 16:38:16 -0400

globus-gass-copy (8.5-2) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-gass-copy (8.5-1) unstable; urgency=low

  * GRIDFTP-200: mixing ftp:// with -cred fails
  * GRIDFTP-203: -create-dest fails when input is stdin
  * GRIDFTP-208: Add manpage for globus-url-copy
  * GRIDFTP-211: potentially unsafe format strings in globus-url-copy
  * GRIDFTP-216: continue on error doesn't continue when a dir listing fails
  * GRIDFTP-220: don't attempt mkdir when dir is known to exist.
  * GT-153: make gridftp-v2 GET/PUT the default for server that support it
  * RIC-224: Eliminate some doxygen warnings
  * RIC-226: Some dependencies are missing in GPT metadata

 -- Globus Toolkit <support@globus.org>  Wed, 27 Jun 2012 19:02:47 +0000

globus-gass-copy (8.4-1) unstable; urgency=low
