@@ -17,17 +17,10 @@ AC_SUBST(DIRT_BRANCH_ID)
 PKG_CHECK_MODULES([PACKAGE_DEP], $PACKAGE_DEPS)
 
 GSI_DRIVER_LIBDIR=`pkg-config --variable=libdir globus-xio-gsi-driver`
-GSI_DRIVER=""
-for ext in .la .so .dylib .a; do
-    if test -r $GSI_DRIVER_LIBDIR/libglobus_xio_gsi_driver${ext}; then
-        GSI_DRIVER=$GSI_DRIVER_LIBDIR/libglobus_xio_gsi_driver${ext} 
-        break
-    fi
-done
-
-AC_SUBST(GLOBUS_XIO_GSI_DRIVER, $GSI_DRIVER)
+AC_SUBST(GSI_DRIVER_LIBDIR)
 
 PIPE_DRIVER_LIBDIR=`pkg-config --variable=libdir globus-xio-pipe-driver`
+AC_SUBST(PIPE_DRIVER_LIBDIR)
 PIPE_DRIVER=""
 for ext in .la .so .dylib .a; do
     if test -r $PIPE_DRIVER_LIBDIR/libglobus_xio_pipe_driver${ext}; then
@@ -36,14 +29,9 @@ for ext in .la .so .dylib .a; do
     fi
 done
 
-AC_SUBST(GLOBUS_XIO_PIPE_DRIVER, $PIPE_DRIVER)
 
 GRIDFTP_SBINDIR=`pkg-config --variable=sbindir globus-gridftp-server`
 AC_SUBST(GRIDFTP_SBINDIR, $GRIDFTP_SBINDIR)
-AM_CONDITIONAL([GRIDFTP_TESTS],
-  [ test "$GSI_DRIVER" != "" && \
-    test "$PIPE_DRIVER" != "" && \
-    test -d "$GRIDFTP_SBINDIR"])
 
 AC_PATH_PROGS([DOXYGEN], doxygen)
 
